--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
     <div>
         <p class="ptext">example</p>
     </div>
+    <form action=""></form>
+    <img src="https://p2.itc.cn/images01/20210215/c904142159564469b59fd1d6b04b930e.jpeg" alt="">
+    <img src="https://megapx-assets.dcard.tw/images/348b9d6a-e7e0-403a-84fd-eeb056260d42/640.jpeg">
     <script>
         console.log(document);
         console.log(document.nodeType);
         console.log(Node.DOCUMENT_NODE);
+        console.log(document.doctype) //get doctyoe
+        console.log(document.documentElement); //html node
+        console.log(document.head);
+        console.log(document.body);
+        console.log(document.forms);    //get all form tag
+        console.log(document.images);   //get image
+        var images = document.images;
+        for(var i=0;i<images.length;i++){
+            if(images[i].src=="https://p2.itc.cn/images01/20210215/c904142159564469b59fd1d6b04b930e.jpeg"){
+                console.log("不讲武德");
+            }
+        }
+        console.log(document.domain);
     </script>
 </body>
 </html>
