--- a/attributes.html
+++ b/attributes.html
@@ -11,6 +11,7 @@
     <img src="https://p2.itc.cn/images01/20210215/c904142159564469b59fd1d6b04b930e.jpeg" alt="">
     <img src="https://megapx-assets.dcard.tw/images/348b9d6a-e7e0-403a-84fd-eeb056260d42/640.jpeg">
     <script>
+        /*
         console.log(document);
         console.log(document.nodeType);
         console.log(Node.DOCUMENT_NODE);
@@ -19,6 +20,7 @@
         console.log(document.head);
         console.log(document.body);
         console.log(document.forms);    //get all form tag
+        */
         console.log(document.images);   //get image
         var images = document.images;
         for(var i=0;i<images.length;i++){
@@ -26,7 +28,7 @@
                 console.log("不讲武德");
             }
         }
-        console.log(document.domain);
+        console.log(document.domain);   //get domain name
     </script>
 </body>
 </html>
