--- a/create.html
+++ b/create.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>create</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>create element</title>
 </head>
 <body>
-
     <script>
         var body = document.getElementsByTagName("body"); //collection of body tag
         console.log(body[0]);
