--- a/attributes.html
+++ b/attributes.html
@@ -2,36 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>attributes</title>
 </head>
 <body>
-    <div>
-        <p class="ptext">example</p>
-    </div>
-    <form action=""></form>
-    <img src="https://p2.itc.cn/images01/20210215/c904142159564469b59fd1d6b04b930e.jpeg" alt="">
-    <img src="https://megapx-assets.dcard.tw/images/348b9d6a-e7e0-403a-84fd-eeb056260d42/640.jpeg">
+    <div class="docker" data-selfdefine="20/06/2022" id="box" title="" aria-busy="">example</div>
     <script>
-        /*
-        console.log(document);
-        console.log(document.nodeType);
-        console.log(Node.DOCUMENT_NODE);
-        console.log(document.doctype) //get doctyoe
-        console.log(document.documentElement); //html node
-        console.log(document.head);
-        console.log(document.body);
-        console.log(document.forms);    //get all form tag
-        */
-        console.log(document.images);   //get image
-        var images = document.images;
-        for(var i=0;i<images.length;i++){
-            if(images[i].src=="https://p2.itc.cn/images01/20210215/c904142159564469b59fd1d6b04b930e.jpeg"){
-                console.log("不讲武德");
-            }
+        var docker = document.getElementById("box");
+        console.log(docker.getAttribute("class"));
+        docker.setAttribute("id","mingke");
+        console.log(docker.hasAttribute("src"));
+        if(!docker.hasAttribute("src")){
+            docker.setAttribute("id","no_src")
         }
-        console.log(document.domain);   //get domain name
+        docker.removeAttribute("aria-busy");
+        docker.dataset.selfdefine = " 20/06/2022 very busy";
+        console.log(docker.dataset.selfdefine);
     </script>
 </body>
 </html>
