--- a/Document Object/attributes.html
+++ b/Document Object/attributes.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>attributes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Attributes</title>
 </head>
 <body>
     <div class="docker" data-selfdefine="20/06/2022" id="box" title="" aria-busy="">example</div>
