--- a/Document Object/document.html
+++ b/Document Object/document.html
@@ -11,8 +11,8 @@
         <p class="ptext">example</p>
     </div>
     <form action=""></form>
-    <img src="https://p2.itc.cn/images01/20210215/c904142159564469b59fd1d6b04b930e.jpeg" alt="">
-    <img src="https://megapx-assets.dcard.tw/images/348b9d6a-e7e0-403a-84fd-eeb056260d42/640.jpeg">
+    <img src="https://p2.itc.cn/images01/20210215/c904142159564469b59fd1d6b04b930e.jpeg" alt=""/>
+    <img src="https://megapx-assets.dcard.tw/images/348b9d6a-e7e0-403a-84fd-eeb056260d42/640.jpeg" alt=""/>
     <script>
         /*
         console.log(document);
