--- a/Document Object/functions.html
+++ b/Document Object/functions.html
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
+    <label for="search" >
     <input type="text" id="search">
     <div id="box">I am not removed</div>
     <div class="docker" id="docker"></div>
